Fixed layout of view more options

--- a/src/views/notice/styles/notice-styles.css
+++ b/src/views/notice/styles/notice-styles.css
@@ -21,8 +21,8 @@
   color: white;
 }
 
-.lock-icon {
-  background-image: url('../../../images/icons/ic_lock.png');
+.pinlock-icon {
+  background-image: url('../../../images/icons/pinsecurityicon.png');
 }
 
 .lock-icon-settings {
